# AskAIwithPyReactFastapi

./: render.yaml
backend/: Dockerfile  database.py  main.py  pyproject.toml  requirements.txt
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.js  App.jsx  index.css  index.jsx
