[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.47",
    "fastapi>=0.128.8",
    "google-auth>=2.48.0",
    "httpx>=0.28.1",
    "openai>=2.20.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "typing>=3.10.0.0",
    "uvicorn>=0.40.0",
]
